tests/baselines/reference/YieldStarExpression2_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldStarExpression2_es6.ts(1,1): error TS2552: Cannot find name 'yield'. Did you mean 'eval'?
tests/cases/conformance/es6/yieldExpressions/YieldStarExpression2_es6.ts(1,8): error TS1109: Expression expected.


==== tests/cases/conformance/es6/yieldExpressions/YieldStarExpression2_es6.ts (2 errors) ====
    yield *;
    ~~~~~
!!! error TS2552: Cannot find name 'yield'. Did you mean 'eval'?
           ~
!!! error TS1109: Expression expected.